--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">DiagKnowsis</span> Top
+                    <i class="fa fa-play-circle"></i>  <span class="light">Crime</span> Top
                 </a>
             </div>
 
@@ -70,8 +70,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Diagknowsis</h1>
-                        <p class="intro-text">A free diagnosis for anyone and everyone.</p>
+                        <h1 class="brand-heading">Crime</h1>
+                        <p class="intro-text">A do-it-yourself dynamic machine learning evaluation algorithm. For your community.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -85,12 +85,34 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Write down your diagnosis here.</h2>
-                <input type="text" id="diagnosis_input" class="form-control"> <br>
-                <button id="diagnosis_button" class="btn btn-default btn-lg">Diagknows me!</button>
-                <p>Diagknowsis uses over 500 commonly known diseases and their key word symptoms. It's very likely that our diagnosis is correct!</p>
+                <h2>Give us your query! PCA</h2>
+                <input type="text" id="PCA_input" class="form-control"> <br>
+                <button id="PCA_button" class="btn btn-default btn-lg">Crime</button>
+                <p>Test</p>
             </div>
-            <div id = "output" class="col-lg-8 col-lg-offset-2">
+            <div id = "PCA_output" class="col-lg-8 col-lg-offset-2">
+                Hi there
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Give us your query! Recommender System</h2>
+                <input type="text" id="RS_input" class="form-control"> <br>
+                <button id="RS_button" class="btn btn-default btn-lg">Crime</button>
+                <p>Test</p>
+            </div>
+            <div id = "RS_output" class="col-lg-8 col-lg-offset-2">
+                Hi there
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Give us your query! KMeans</h2>
+                <input type="text" id="KM_input" class="form-control"> <br>
+                <button id="KM_button" class="btn btn-default btn-lg">Crime</button>
+                <p>Test</p>
+            </div>
+            <div id = "KM_output" class="col-lg-8 col-lg-offset-2">
                 Hi there
             </div>
         </div>
