--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Crime</span> Top
+                    <i class="fa fa-play-circle"></i>  <span class="light">TeraML</span> Top
                 </a>
             </div>
 
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Crime</h1>
+                        <h1 class="brand-heading">TeraML</h1>
                         <p class="intro-text">A do-it-yourself dynamic machine learning evaluation algorithm. For your community.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -87,7 +87,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Give us your query! PCA</h2>
                 <input type="text" id="PCA_input" class="form-control"> <br>
-                <button id="PCA_button" class="btn btn-default btn-lg">Crime</button>
+                <button id="PCA_button" class="btn btn-default btn-lg">TeraML</button>
                 <p>Test</p>
             </div>
             <div id = "PCA_output" class="col-lg-8 col-lg-offset-2">
@@ -98,7 +98,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Give us your query! Recommender System</h2>
                 <input type="text" id="RS_input" class="form-control"> <br>
-                <button id="RS_button" class="btn btn-default btn-lg">Crime</button>
+                <button id="RS_button" class="btn btn-default btn-lg">TeraML</button>
                 <p>Test</p>
             </div>
             <div id = "RS_output" class="col-lg-8 col-lg-offset-2">
@@ -109,7 +109,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Give us your query! KMeans</h2>
                 <input type="text" id="KM_input" class="form-control"> <br>
-                <button id="KM_button" class="btn btn-default btn-lg">Crime</button>
+                <button id="KM_button" class="btn btn-default btn-lg"></button>
                 <p>Test</p>
             </div>
             <div id = "KM_output" class="col-lg-8 col-lg-offset-2">
@@ -129,7 +129,7 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Diagknowsis</h2>
+                <h2>Contact TeraML</h2>
                 <p>Feel free to email us to provide some feedback on our project, as well as any questions!</p>
                 <p><a href="mailto:peifeng2005@gmail.com">peifeng2005@gmail.com</a>
                 </p>
